--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
 </head>
 <body>
 
-<h1>My Resume</h1>
+<h1>Resume:</h1>
 
 <img width="200px"
   src="./img/WhatsApp Image 2023-08-26 at 15.03.44.jpg"
@@ -17,7 +19,7 @@
 
 
 <h2>Objective</h2>
-<p>
+<p class="dim">
 My qualification is Fsc pre enginearing from govt college peshawar.
 At present i am learning about chatgpt and in future my goal is to
 become an expert in IT.
@@ -31,7 +33,7 @@ become an expert in IT.
 
     <h2>EDUCATION</h2>
 
-    <table border="1px">
+    <table border="2px">
       <thead>
         <tr>
           <th>Name Of Degree</th>
