--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 
 
+<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
@@ -31,7 +35,7 @@ become an expert in IT.
     <li>Address: Warsakroad Peshawar</li>
     <li>Contact Number: 03189954486</li>
 
-    <h2>EDUCATION</h2>
+    <h2 class="edutable">EDUCATION</h2>
 
     <table border="2px">
       <thead>
